--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ Secondary Color (Orange): #e0b354;
   --white: white;
 }
 
- * {
+* {
   box-sizing: border-box;
 }
 
@@ -53,12 +53,12 @@ Secondary Color (Orange): #e0b354;
   text-decoration: none;
 }
 
-/*remove dots*/
+/* remove dots */
 .about-list__item {
   list-style: none;
 }
 
-body{
+body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -82,6 +82,7 @@ h1 {
   margin: 0 auto;
   text-align: center;
 }
+
 /*
 .profile__text {
   flex: 1 1 100px;
@@ -95,7 +96,8 @@ a:visited {
   color: var(--a-visited);
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
 }
 
@@ -106,22 +108,28 @@ a:active {
 button {
   /* overwrites browser defaults and resets the border */
   border: none;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: var(--primary-color);
   color: var(--white);
   text-decoration: none;
-  /*adds spacing to the button (this will be discussed more in-depth later) */
+
+  /* adds spacing to the button (this will be discussed more in-depth later) */
   padding: 10px;
   border-radius: 3px;
+
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
+
   /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
@@ -135,37 +143,41 @@ button:hover, button:focus {
 .grid__item {
   display: inline-block;
   width: 33%;
- }
- /* end grid fallback */
+}
 
- @supports (display: grid) {
- .grid {
-  display: grid;
-  /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;
-  margin: 0;
- }
+/* end grid fallback */
 
-.grid__item {
-  background-color: lightgray;
-  padding: 15px;
-  width: auto;
-  min-height: auto;
-  margin: 0;
- }
-/* long-form for combining
+@supports (display: grid) {
+  .grid {
+    display: grid;
+
+    /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin: 0;
+  }
+
+  .grid__item {
+    background-color: lightgray;
+    padding: 15px;
+    width: auto;
+    min-height: auto;
+    margin: 0;
+  }
+
+  /* long-form for combining
 .grid__item:last-child {
   grid-column-start: 3;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3;
-}*/
-/*long-form
+} */
+
+  /* long-form
 .grid__item:last-child {
   grid-column: 3 / 3;
   grid-row: 1 / 3;
- }*/
+ } */
 }
 
 @media all and (max-width: 500px) {
@@ -173,36 +185,44 @@ button:hover, button:focus {
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
 }
 
-.button, button {
+.button,
+button {
   /* overwrites browser defaults and resets the border */
   border: none;
   display: inline-block;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* styles the button */
   background-color: var(--primary-color);
   color: var(--white);
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
+
   /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition-duration: 0.2s;
@@ -215,26 +235,33 @@ button:focus,
 .button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
+
   /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
 
-.button, button {
+.button,
+button {
   /* overwrites browser defaults */
+
   /* resets the border */
   border: none;
   display: inline-block;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* style button */
   background-color: var(--primary-color);
   color: var(--white);
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
+
   /* width of the border, type, color */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
+
   /*
   transition: [transition-property] [transition-duration] [transition-timing-function] [transition-delay];
   */
@@ -244,13 +271,16 @@ button:focus,
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
 }
+
 /* another form
 @keyframes color-change {
   from {
@@ -259,7 +289,7 @@ button:focus,
   to {
     fill: #f76414;
   }
-}*/
+} */
 
 /* long form
 .sun {
@@ -278,6 +308,7 @@ button:focus,
   from {
     transform: translate(0, 50px);
   }
+
   to {
     transform: translate(200px, 50px);
   }
@@ -300,6 +331,7 @@ button:focus,
   from {
     transform: translate(446px, 48px);
   }
+
   to {
     transform: translate(100px, 48px);
   }
