--- a/css/style.production.css
+++ b/css/style.production.css
@@ -148,6 +148,7 @@ button:focus {
 .grid__item {
   display: inline-block;
   width: 33%;
+  padding: 20px;
 }
 
 /* end grid fallback */
@@ -161,12 +162,12 @@ button:focus {
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin: 0;
+    margin: 0 20px;
   }
 
   .grid__item {
     background-color: lightgray;
-    padding: 15px;
+    padding: 20px;
     width: auto;
     min-height: auto;
     margin: 0;
@@ -461,5 +462,12 @@ button {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  text-align: center;
+}
+
+.contact_text {
+  max-width: 700px;
+  margin: 0 auto;
+  flex: 1 1 100px;
   text-align: center;
 }
